--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "18.3.1",
-    "react-native": "0.75.2"
+    "react-native": "0.75.2",
+    "react-native-paper": "^5.12.5",
+    "react-native-safe-area-context": "^4.10.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
